--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<title>foo</title>
-<body>
-	<h1>bar</h1>
-</body>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>foo</title>
+	</head>
+	<body>
+		<h1>bar</h1>
+	</body>
+</html>
